crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__predicates__filter_by_nested_field_collection.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "name": {
          "name": "Gollum",
          "popularity": "1"
        },
        "characters": {
          "members": [
            {
              "name": "Frodo",
              "popularity": "3"
            },
            {
              "name": "Sam",
              "popularity": "9000"
            }
          ],
          "name": "Mellowship"
        }
      }
    ]
  }
]
