crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__predicates__select_where_album_id_equals_self.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 340,
        "Title": "Liszt - 12 Études D'Execution Transcendante"
      }
    ]
  }
]
